Fixing flaky test cases for DiskThresholdDeciderIT (#5952) (#6166)
(cherry picked from commit f3ed0d6d12f2aa156bb30253c0b5d4eb3f84e81e)

Signed-off-by: Rishav Sagar <rissag@amazon.com>
Signed-off-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Rishav Sagar <rissag@amazon.com>